--- a/frontend/public/styles/components/posts.scss
+++ b/frontend/public/styles/components/posts.scss
@@ -39,6 +39,7 @@
                 height: 80%;
                 margin-right: 15px;
                 border-radius: 5px;
+                box-sizing: border-box;
                 background-color: $top-bg-color;
             }
         }
